2013-05-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #48473: Add action to test localization after installation of language pack
	* Fix language pack update

2013-05-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Log usage of deprecated functions
	* Set TYPO3 version constraint to 6.0.6-6.1.99
	* Delete unused partials
	* Fix domain model inconsistencies
	* Refactor findAllOrderedByLocalizedName

2013-05-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Fix for backward compatibility of class tx_staticinfotables_div
	* Update some copyright notices
	* Follow-up fix for backward compatibility of class tx_staticinfotables_div

2013-05-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Re-introduce class tx_staticinfotables_div for backward compatibility

2013-05-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #12683: Make TS template constants selectable
	* Follow-up to #45862: Enable domain model extension: rebuild class cache when updating extensions
	* Remove unnecessary entries from ext_autoload.php
	* Fix layout of code generated by class cache builder

2013-05-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #12683: Make TS template constants selectable
	* Resolves #48197: Incorrect extension of the language domain model by language packs
	* Resolves #48198: Add methods to retrieve entities ordered by localized names

2013-05-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #48156: Add backend module to generate language packs
	* Resolves #48161: Localization should honour alternative languages
	* Resolves #48162: Make pibase-style api usable in backend
	* Resolves #48163: Add repository method to retrieve all non-constructed and non-sacred languages
	* Resolves #48164: Add repository method to retrieve all entities including deleted ones
	* Update version to 6.0.0
	* Simplify EM configuration template

2013-03-05  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #46051: Make the extension version and constraints available when creating language packs
